--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MentalRecordApplication"
         tools:targetApi="31">
         <activity
-            android:name=".main.MainActivity"
+            android:name=".main.view.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MentalRecordApplication">
             <intent-filter>
@@ -21,6 +21,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".record_mood.view.RecordMoodActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MentalRecordApplication">
         </activity>
     </application>
 
