--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MentalRecordApplication"
         tools:targetApi="31">
         <activity
-            android:name=".main.view.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MentalRecordApplication">
             <intent-filter>
